2014-02-03  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4: Clean up global variable names.
	* config/setup-dep.mk: Likewise.
	* config/var-def.mk: Likewise.
	* configure.ac: Likewise.

2014-02-02  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* config/open-axiom.m4 (OPENAXIOM_CHECK_IO): Prefer mktemp,
	mkdtemp, mkstemp over tempnam.
